Add demo + external IP notes

--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -312,8 +312,17 @@ Reveal.on( 'fragmenthidden', event => {
   </section>
 
   <section class="center">
-    <h2>Running Hello World on Rocket</h2>
-    <p>Quick Demo</p>
+    <h2>External IP (language integration)</h2>
+<!-- - What PL people want : they want to integration accelerators built w/ their DSLs and evaluate it in the SoC context. -->
+<!-- - We can provide an example on how to do this. -->
+<!-- - Then we can explain about all the short commings of this approach. -->
+<!-- - Janky, ad-hoc glue code -->
+<!-- - SoC level parameter negotiation is difficult -->
+<!-- - collateral generation (including compiler generation) -->
+<!-- - FYI : compiler generation is basically generating software stubs to program the accelerator -->
+<!-- - Then, we can explain about the two possible approaches. -->
+<!-- - short-term approach : Graal VM + have a way of interchanging SoC level parameters (Diplomacy+++) -->
+<!-- - long-term superior approach : unified frontend (we should also mention that the frontend should be extensible such that it doesn't limit further improvements in DSLs) -->
   </section>
 
   <section class="center">
